# wick

./: .gitattributes  CHANGELOG.md  Cargo.toml  README.md  composer.json  dist-workspace.toml  flake.nix  release-please-config.json
.github/: dependabot.yml
.github/workflows/: ci.yml  composer-branch.yml  crates-publish.yml  publish-mirror.yml  release-please.yml  release.yml
packaging/composer/: composer.json
packaging/composer/src/: Launcher.php  version.php
scripts/: publish-composer-branch.sh
src/: Launcher.php  format.rs  lint.rs  main.rs  php_version.rs  version.php
tests/fixtures/: messy.php
