[package]
name = "wick"
version = "0.3.0" # x-release-please-version
edition = "2024"
rust-version = "1.96"
license = "EUPL-1.2"
authors = ["Jelle Besseling <jelle@pingiun.com>"]
description = "An unconfigurable, Laravel Pint-style PHP formatter. Powered by Mago."
repository = "https://github.com/cresset-tools/wick"
readme = "README.md"
keywords = ["php", "formatter", "laravel", "pint", "code-style"]
categories = ["command-line-utilities", "development-tools"]
# The Composer distribution (PHP launcher + generator) and the root
# composer.json exist only for Packagist; keep them out of the crates.io
# tarball, which ships just the Rust formatter.
exclude = ["/packaging", "/composer.json", "/scripts", "/.github"]

[[bin]]
name = "wick"
path = "src/main.rs"

[dependencies]
# The formatting engine. wick is a thin, opinionated front-end over Mago's
# `Pint` preset — it does not parse or print PHP itself.
# https://github.com/carthage-software/mago (MIT OR Apache-2.0)
mago-formatter = "1.30"
mago-php-version = "1.30"

# The linting engine (`wick check`). Same spirit as the formatter: wick runs
# Mago's default rule set, unconfigured, at the detected PHP version.
mago-linter = "1.30"
mago-database = "1.30"
mago-syntax = "1.30"
mago-names = "1.30"
mago-reporting = "1.30"
mago-text-edit = "1.30"

bumpalo = "3"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
serde_json = "1"
similar = "3"
anyhow = "1"

[profile.release]
lto = "thin"
strip = true

# cargo-dist builds release artifacts with `--profile dist`. Inherit
# release; dist expects this profile to exist (normally added by
# `dist init`).
[profile.dist]
inherits = "release"
lto = "thin"
